## Process this file with automake to produce Makefile.in


lib_LTLIBRARIES =  \
	libtitania-opengl-surface.la

libtitania_opengl_surface_la_SOURCES =  \
	Titania/OpenGL/Context/Context.cpp \
	Titania/OpenGL/Context/OffScreenContext.cpp \
	Titania/OpenGL/Surface.cpp

libtitania_opengl_surface_la_LIBADD =  \
	$(TITANIA_OPENGL_SURFACE_LIBS)

AM_CPPFLAGS = $(TITANIA_OPENGL_SURFACE_CFLAGS)

