## Process this file with automake to produce Makefile.in


lib_LTLIBRARIES =  \
	libtitania-x3d.la

libtitania_x3d_la_SOURCES =  \
	Titania/X3D.cpp \
	Titania/X3D/Base/ChildObjectSet.cpp \
	Titania/X3D/Base/Error.cpp \
	Titania/X3D/Base/Output.cpp \
	Titania/X3D/Base/X3DChildObject.cpp \
	Titania/X3D/Base/X3DGarbargeCollector.cpp \
	Titania/X3D/Base/X3DInput.cpp \
	Titania/X3D/Base/X3DObject.cpp \
	Titania/X3D/Base/X3DOutput.cpp \
	Titania/X3D/Base/X3DParentObject.cpp \
	Titania/X3D/Base/X3DReferenceObject.cpp \
	Titania/X3D/Basic/BaseNodeArray.cpp \
	Titania/X3D/Basic/FieldDefinitionArray.cpp \
	Titania/X3D/Basic/FieldDefinitionSet.cpp \
	Titania/X3D/Basic/FieldSet.cpp \
	Titania/X3D/Basic/NodeSet.cpp \
	Titania/X3D/Basic/NodeTypeArray.cpp \
	Titania/X3D/Basic/NodeTypeSet.cpp \
	Titania/X3D/Basic/Traverse.cpp \
	Titania/X3D/Basic/X3DBaseNode.cpp \
	Titania/X3D/Basic/X3DFieldDefinition.cpp \
	Titania/X3D/Browser/Browser.cpp \
	Titania/X3D/Browser/BrowserOptions.cpp \
	Titania/X3D/Browser/BrowserProperties.cpp \
	Titania/X3D/Browser/Console.cpp \
	Titania/X3D/Browser/Core/X3DCoreContext.cpp \
	Titania/X3D/Browser/Core/X3DOptionNode.cpp \
	Titania/X3D/Browser/CubeMapTexturing/X3DCubeMapTexturingContext.cpp \
	Titania/X3D/Browser/Geometry2D/Arc2DOptions.cpp \
	Titania/X3D/Browser/Geometry2D/ArcClose2DOptions.cpp \
	Titania/X3D/Browser/Geometry2D/Circle2DOptions.cpp \
	Titania/X3D/Browser/Geometry2D/Disk2DOptions.cpp \
	Titania/X3D/Browser/Geometry2D/Rectangle2DOptions.cpp \
	Titania/X3D/Browser/Geometry2D/X3DGeometry2DContext.cpp \
	Titania/X3D/Browser/Geometry3D/BoxOptions.cpp \
	Titania/X3D/Browser/Geometry3D/ConeOptions.cpp \
	Titania/X3D/Browser/Geometry3D/CylinderOptions.cpp \
	Titania/X3D/Browser/Geometry3D/QuadSphereOptions.cpp \
	Titania/X3D/Browser/Geometry3D/X3DGeometry3DContext.cpp \
	Titania/X3D/Browser/Geometry3D/X3DSphereOptionNode.cpp \
	Titania/X3D/Browser/Geospatial/Geospatial.cpp \
	Titania/X3D/Browser/KeyDeviceSensor/KeyDevice.cpp \
	Titania/X3D/Browser/KeyDeviceSensor/Keys.cpp \
	Titania/X3D/Browser/KeyDeviceSensor/X3DKeyDeviceSensorContext.cpp \
	Titania/X3D/Browser/Layering/X3DLayeringContext.cpp \
	Titania/X3D/Browser/Lighting/X3DLightingContext.cpp \
	Titania/X3D/Browser/Navigation/ExamineViewer.cpp \
	Titania/X3D/Browser/Navigation/FlyViewer.cpp \
	Titania/X3D/Browser/Navigation/LookAtViewer.cpp \
	Titania/X3D/Browser/Navigation/NoneViewer.cpp \
	Titania/X3D/Browser/Navigation/PlaneViewer.cpp \
	Titania/X3D/Browser/Navigation/WalkViewer.cpp \
	Titania/X3D/Browser/Navigation/X3DFlyViewer.cpp \
	Titania/X3D/Browser/Navigation/X3DNavigationContext.cpp \
	Titania/X3D/Browser/Navigation/X3DViewer.cpp \
	Titania/X3D/Browser/Networking/config.cpp \
	Titania/X3D/Browser/Networking/X3DNetworkingContext.cpp \
	Titania/X3D/Browser/Notification.cpp \
	Titania/X3D/Browser/ParticleSystems/BVH.cpp \
	Titania/X3D/Browser/ParticleSystems/Random.cpp \
	Titania/X3D/Browser/ParticleSystems/X3DParticleSystemsContext.cpp \
	Titania/X3D/Browser/PointingDeviceSensor/Hit.cpp \
	Titania/X3D/Browser/PointingDeviceSensor/HitArray.cpp \
	Titania/X3D/Browser/PointingDeviceSensor/LassoSelection.cpp \
	Titania/X3D/Browser/PointingDeviceSensor/PointingDevice.cpp \
	Titania/X3D/Browser/PointingDeviceSensor/X3DPointingDeviceSensorContext.cpp \
	Titania/X3D/Browser/PointingDeviceSensor/X3DSelector.cpp \
	Titania/X3D/Browser/Rendering/MotionBlur.cpp \
	Titania/X3D/Browser/Rendering/X3DGeometricOptionNode.cpp \
	Titania/X3D/Browser/Rendering/X3DRenderingContext.cpp \
	Titania/X3D/Browser/RenderingProperties.cpp \
	Titania/X3D/Browser/Scripting/X3DScriptingContext.cpp \
	Titania/X3D/Browser/Selection.cpp \
	Titania/X3D/Browser/Shading/Shader.cpp \
	Titania/X3D/Browser/Shading/X3DShadingContext.cpp \
	Titania/X3D/Browser/Shape/X3DShapeContext.cpp \
	Titania/X3D/Browser/Sound/MediaStream.cpp \
	Titania/X3D/Browser/Text/Font.cpp \
	Titania/X3D/Browser/Text/FontFace.cpp \
	Titania/X3D/Browser/Text/X3DTextContext.cpp \
	Titania/X3D/Browser/Texturing/Texture.cpp \
	Titania/X3D/Browser/Texturing/X3DTexture.cpp \
	Titania/X3D/Browser/Texturing/X3DTexturingContext.cpp \
	Titania/X3D/Browser/Texturing3D/Texture3D.cpp \
	Titania/X3D/Browser/Tools/TransformToolOptions.cpp \
	Titania/X3D/Browser/Tools/X3DToolContext.cpp \
	Titania/X3D/Browser/X3DBrowser.cpp \
	Titania/X3D/Browser/X3DBrowserContext.cpp \
	Titania/X3D/Components/CADGeometry/CADAssembly.cpp \
	Titania/X3D/Components/CADGeometry/CADFace.cpp \
	Titania/X3D/Components/CADGeometry/CADLayer.cpp \
	Titania/X3D/Components/CADGeometry/CADPart.cpp \
	Titania/X3D/Components/CADGeometry/IndexedQuadSet.cpp \
	Titania/X3D/Components/CADGeometry/QuadSet.cpp \
	Titania/X3D/Components/CADGeometry/X3DProductStructureChildNode.cpp \
	Titania/X3D/Components/Core/MetadataBoolean.cpp \
	Titania/X3D/Components/Core/MetadataDouble.cpp \
	Titania/X3D/Components/Core/MetadataFloat.cpp \
	Titania/X3D/Components/Core/MetadataInteger.cpp \
	Titania/X3D/Components/Core/MetadataSet.cpp \
	Titania/X3D/Components/Core/MetadataString.cpp \
	Titania/X3D/Components/Core/WorldInfo.cpp \
	Titania/X3D/Components/Core/X3DBindableNode.cpp \
	Titania/X3D/Components/Core/X3DChildNode.cpp \
	Titania/X3D/Components/Core/X3DInfoNode.cpp \
	Titania/X3D/Components/Core/X3DMetadataObject.cpp \
	Titania/X3D/Components/Core/X3DNode.cpp \
	Titania/X3D/Components/Core/X3DPrototypeInstance.cpp \
	Titania/X3D/Components/Core/X3DSensorNode.cpp \
	Titania/X3D/Components/CubeMapTexturing/ComposedCubeMapTexture.cpp \
	Titania/X3D/Components/CubeMapTexturing/GeneratedCubeMapTexture.cpp \
	Titania/X3D/Components/CubeMapTexturing/ImageCubeMapTexture.cpp \
	Titania/X3D/Components/CubeMapTexturing/X3DEnvironmentTextureNode.cpp \
	Titania/X3D/Components/DIS/DISEntityManager.cpp \
	Titania/X3D/Components/DIS/DISEntityTypeMapping.cpp \
	Titania/X3D/Components/DIS/EspduTransform.cpp \
	Titania/X3D/Components/DIS/ReceiverPdu.cpp \
	Titania/X3D/Components/DIS/SignalPdu.cpp \
	Titania/X3D/Components/DIS/TransmitterPdu.cpp \
	Titania/X3D/Components/EnvironmentalEffects/Background.cpp \
	Titania/X3D/Components/EnvironmentalEffects/Fog.cpp \
	Titania/X3D/Components/EnvironmentalEffects/FogCoordinate.cpp \
	Titania/X3D/Components/EnvironmentalEffects/LocalFog.cpp \
	Titania/X3D/Components/EnvironmentalEffects/TextureBackground.cpp \
	Titania/X3D/Components/EnvironmentalEffects/X3DBackgroundNode.cpp \
	Titania/X3D/Components/EnvironmentalEffects/X3DFogObject.cpp \
	Titania/X3D/Components/EnvironmentalSensor/ProximitySensor.cpp \
	Titania/X3D/Components/EnvironmentalSensor/TransformSensor.cpp \
	Titania/X3D/Components/EnvironmentalSensor/VisibilitySensor.cpp \
	Titania/X3D/Components/EnvironmentalSensor/X3DEnvironmentalSensorNode.cpp \
	Titania/X3D/Components/EventUtilities/BooleanFilter.cpp \
	Titania/X3D/Components/EventUtilities/BooleanSequencer.cpp \
	Titania/X3D/Components/EventUtilities/BooleanToggle.cpp \
	Titania/X3D/Components/EventUtilities/BooleanTrigger.cpp \
	Titania/X3D/Components/EventUtilities/IntegerSequencer.cpp \
	Titania/X3D/Components/EventUtilities/IntegerTrigger.cpp \
	Titania/X3D/Components/EventUtilities/TimeTrigger.cpp \
	Titania/X3D/Components/EventUtilities/X3DSequencerNode.cpp \
	Titania/X3D/Components/EventUtilities/X3DTriggerNode.cpp \
	Titania/X3D/Components/Followers/ColorChaser.cpp \
	Titania/X3D/Components/Followers/ColorDamper.cpp \
	Titania/X3D/Components/Followers/CoordinateChaser.cpp \
	Titania/X3D/Components/Followers/CoordinateDamper.cpp \
	Titania/X3D/Components/Followers/OrientationChaser.cpp \
	Titania/X3D/Components/Followers/OrientationDamper.cpp \
	Titania/X3D/Components/Followers/PositionChaser.cpp \
	Titania/X3D/Components/Followers/PositionChaser2D.cpp \
	Titania/X3D/Components/Followers/PositionDamper.cpp \
	Titania/X3D/Components/Followers/PositionDamper2D.cpp \
	Titania/X3D/Components/Followers/ScalarChaser.cpp \
	Titania/X3D/Components/Followers/ScalarDamper.cpp \
	Titania/X3D/Components/Followers/TexCoordChaser2D.cpp \
	Titania/X3D/Components/Followers/TexCoordDamper2D.cpp \
	Titania/X3D/Components/Followers/X3DChaserNode.cpp \
	Titania/X3D/Components/Followers/X3DDamperNode.cpp \
	Titania/X3D/Components/Followers/X3DFollowerNode.cpp \
	Titania/X3D/Components/Geometry2D/Arc2D.cpp \
	Titania/X3D/Components/Geometry2D/ArcClose2D.cpp \
	Titania/X3D/Components/Geometry2D/Circle2D.cpp \
	Titania/X3D/Components/Geometry2D/Disk2D.cpp \
	Titania/X3D/Components/Geometry2D/Polyline2D.cpp \
	Titania/X3D/Components/Geometry2D/Polypoint2D.cpp \
	Titania/X3D/Components/Geometry2D/Rectangle2D.cpp \
	Titania/X3D/Components/Geometry2D/TriangleSet2D.cpp \
	Titania/X3D/Components/Geometry3D/Box.cpp \
	Titania/X3D/Components/Geometry3D/Cone.cpp \
	Titania/X3D/Components/Geometry3D/Cylinder.cpp \
	Titania/X3D/Components/Geometry3D/ElevationGrid.cpp \
	Titania/X3D/Components/Geometry3D/Extrusion.cpp \
	Titania/X3D/Components/Geometry3D/IndexedFaceSet.cpp \
	Titania/X3D/Components/Geometry3D/Sphere.cpp \
	Titania/X3D/Components/Geospatial/GeoCoordinate.cpp \
	Titania/X3D/Components/Geospatial/GeoElevationGrid.cpp \
	Titania/X3D/Components/Geospatial/GeoLocation.cpp \
	Titania/X3D/Components/Geospatial/GeoLOD.cpp \
	Titania/X3D/Components/Geospatial/GeoMetadata.cpp \
	Titania/X3D/Components/Geospatial/GeoOrigin.cpp \
	Titania/X3D/Components/Geospatial/GeoPositionInterpolator.cpp \
	Titania/X3D/Components/Geospatial/GeoProximitySensor.cpp \
	Titania/X3D/Components/Geospatial/GeoTouchSensor.cpp \
	Titania/X3D/Components/Geospatial/GeoTransform.cpp \
	Titania/X3D/Components/Geospatial/GeoViewpoint.cpp \
	Titania/X3D/Components/Geospatial/X3DGeospatialObject.cpp \
	Titania/X3D/Components/Grouping/Group.cpp \
	Titania/X3D/Components/Grouping/StaticGroup.cpp \
	Titania/X3D/Components/Grouping/Switch.cpp \
	Titania/X3D/Components/Grouping/Transform.cpp \
	Titania/X3D/Components/Grouping/TransformMatrix3D.cpp \
	Titania/X3D/Components/Grouping/X3DBoundedObject.cpp \
	Titania/X3D/Components/Grouping/X3DGroupingNode.cpp \
	Titania/X3D/Components/Grouping/X3DTransformMatrix4DNode.cpp \
	Titania/X3D/Components/Grouping/X3DTransformNode.cpp \
	Titania/X3D/Components/H-Anim/HAnimDisplacer.cpp \
	Titania/X3D/Components/H-Anim/HAnimHumanoid.cpp \
	Titania/X3D/Components/H-Anim/HAnimJoint.cpp \
	Titania/X3D/Components/H-Anim/HAnimSegment.cpp \
	Titania/X3D/Components/H-Anim/HAnimSite.cpp \
	Titania/X3D/Components/Interpolation/ColorInterpolator.cpp \
	Titania/X3D/Components/Interpolation/CoordinateInterpolator.cpp \
	Titania/X3D/Components/Interpolation/CoordinateInterpolator2D.cpp \
	Titania/X3D/Components/Interpolation/EaseInEaseOut.cpp \
	Titania/X3D/Components/Interpolation/NormalInterpolator.cpp \
	Titania/X3D/Components/Interpolation/OrientationInterpolator.cpp \
	Titania/X3D/Components/Interpolation/PositionInterpolator.cpp \
	Titania/X3D/Components/Interpolation/PositionInterpolator2D.cpp \
	Titania/X3D/Components/Interpolation/ScalarInterpolator.cpp \
	Titania/X3D/Components/Interpolation/SplinePositionInterpolator.cpp \
	Titania/X3D/Components/Interpolation/SplinePositionInterpolator2D.cpp \
	Titania/X3D/Components/Interpolation/SplineScalarInterpolator.cpp \
	Titania/X3D/Components/Interpolation/SquadOrientationInterpolator.cpp \
	Titania/X3D/Components/Interpolation/X3DInterpolatorNode.cpp \
	Titania/X3D/Components/KeyDeviceSensor/KeySensor.cpp \
	Titania/X3D/Components/KeyDeviceSensor/StringSensor.cpp \
	Titania/X3D/Components/KeyDeviceSensor/X3DKeyDeviceSensorNode.cpp \
	Titania/X3D/Components/Layering/Layer.cpp \
	Titania/X3D/Components/Layering/LayerSet.cpp \
	Titania/X3D/Components/Layering/Viewport.cpp \
	Titania/X3D/Components/Layering/X3DLayerNode.cpp \
	Titania/X3D/Components/Layering/X3DViewportNode.cpp \
	Titania/X3D/Components/Layout/Layout.cpp \
	Titania/X3D/Components/Layout/LayoutGroup.cpp \
	Titania/X3D/Components/Layout/LayoutLayer.cpp \
	Titania/X3D/Components/Layout/ScreenFontStyle.cpp \
	Titania/X3D/Components/Layout/ScreenGroup.cpp \
	Titania/X3D/Components/Layout/X3DLayoutNode.cpp \
	Titania/X3D/Components/Lighting/DirectionalLight.cpp \
	Titania/X3D/Components/Lighting/PointLight.cpp \
	Titania/X3D/Components/Lighting/SpotLight.cpp \
	Titania/X3D/Components/Lighting/X3DLightNode.cpp \
	Titania/X3D/Components/Navigation/Billboard.cpp \
	Titania/X3D/Components/Navigation/Collision.cpp \
	Titania/X3D/Components/Navigation/LOD.cpp \
	Titania/X3D/Components/Navigation/NavigationInfo.cpp \
	Titania/X3D/Components/Navigation/OrthoViewpoint.cpp \
	Titania/X3D/Components/Navigation/Viewpoint.cpp \
	Titania/X3D/Components/Navigation/ViewpointGroup.cpp \
	Titania/X3D/Components/Navigation/X3DViewpointNode.cpp \
	Titania/X3D/Components/Navigation/X3DViewpointObject.cpp \
	Titania/X3D/Components/Networking/Anchor.cpp \
	Titania/X3D/Components/Networking/Inline.cpp \
	Titania/X3D/Components/Networking/LoadSensor.cpp \
	Titania/X3D/Components/Networking/X3DNetworkSensorNode.cpp \
	Titania/X3D/Components/Networking/X3DUrlObject.cpp \
	Titania/X3D/Components/NURBS/Contour2D.cpp \
	Titania/X3D/Components/NURBS/ContourPolyline2D.cpp \
	Titania/X3D/Components/NURBS/CoordinateDouble.cpp \
	Titania/X3D/Components/NURBS/NurbsCurve.cpp \
	Titania/X3D/Components/NURBS/NurbsCurve2D.cpp \
	Titania/X3D/Components/NURBS/NurbsOrientationInterpolator.cpp \
	Titania/X3D/Components/NURBS/NurbsPatchSurface.cpp \
	Titania/X3D/Components/NURBS/NurbsPositionInterpolator.cpp \
	Titania/X3D/Components/NURBS/NurbsSet.cpp \
	Titania/X3D/Components/NURBS/NurbsSurfaceInterpolator.cpp \
	Titania/X3D/Components/NURBS/NurbsSweptSurface.cpp \
	Titania/X3D/Components/NURBS/NurbsSwungSurface.cpp \
	Titania/X3D/Components/NURBS/NurbsTextureCoordinate.cpp \
	Titania/X3D/Components/NURBS/NurbsTrimmedSurface.cpp \
	Titania/X3D/Components/NURBS/X3DNurbsControlCurveNode.cpp \
	Titania/X3D/Components/NURBS/X3DNurbsSurfaceGeometryNode.cpp \
	Titania/X3D/Components/NURBS/X3DParametricGeometryNode.cpp \
	Titania/X3D/Components/ParticleSystems/BoundedPhysicsModel.cpp \
	Titania/X3D/Components/ParticleSystems/ConeEmitter.cpp \
	Titania/X3D/Components/ParticleSystems/ExplosionEmitter.cpp \
	Titania/X3D/Components/ParticleSystems/ForcePhysicsModel.cpp \
	Titania/X3D/Components/ParticleSystems/ParticleSystem.cpp \
	Titania/X3D/Components/ParticleSystems/PointEmitter.cpp \
	Titania/X3D/Components/ParticleSystems/PolylineEmitter.cpp \
	Titania/X3D/Components/ParticleSystems/SurfaceEmitter.cpp \
	Titania/X3D/Components/ParticleSystems/VolumeEmitter.cpp \
	Titania/X3D/Components/ParticleSystems/WindPhysicsModel.cpp \
	Titania/X3D/Components/ParticleSystems/X3DParticleEmitterNode.cpp \
	Titania/X3D/Components/ParticleSystems/X3DParticlePhysicsModelNode.cpp \
	Titania/X3D/Components/Picking/LinePickSensor.cpp \
	Titania/X3D/Components/Picking/PickableGroup.cpp \
	Titania/X3D/Components/Picking/PointPickSensor.cpp \
	Titania/X3D/Components/Picking/PrimitivePickSensor.cpp \
	Titania/X3D/Components/Picking/VolumePickSensor.cpp \
	Titania/X3D/Components/Picking/X3DPickableObject.cpp \
	Titania/X3D/Components/Picking/X3DPickSensorNode.cpp \
	Titania/X3D/Components/PointingDeviceSensor/CylinderSensor.cpp \
	Titania/X3D/Components/PointingDeviceSensor/PlaneSensor.cpp \
	Titania/X3D/Components/PointingDeviceSensor/SphereSensor.cpp \
	Titania/X3D/Components/PointingDeviceSensor/TouchGroup.cpp \
	Titania/X3D/Components/PointingDeviceSensor/TouchSensor.cpp \
	Titania/X3D/Components/PointingDeviceSensor/X3DDragSensorNode.cpp \
	Titania/X3D/Components/PointingDeviceSensor/X3DPointingDeviceSensorNode.cpp \
	Titania/X3D/Components/PointingDeviceSensor/X3DTouchSensorNode.cpp \
	Titania/X3D/Components/Rendering/ClipPlane.cpp \
	Titania/X3D/Components/Rendering/Color.cpp \
	Titania/X3D/Components/Rendering/ColorRGBA.cpp \
	Titania/X3D/Components/Rendering/Coordinate.cpp \
	Titania/X3D/Components/Rendering/IndexedLineSet.cpp \
	Titania/X3D/Components/Rendering/IndexedTriangleFanSet.cpp \
	Titania/X3D/Components/Rendering/IndexedTriangleSet.cpp \
	Titania/X3D/Components/Rendering/IndexedTriangleStripSet.cpp \
	Titania/X3D/Components/Rendering/LineSet.cpp \
	Titania/X3D/Components/Rendering/Normal.cpp \
	Titania/X3D/Components/Rendering/PointSet.cpp \
	Titania/X3D/Components/Rendering/TriangleFanSet.cpp \
	Titania/X3D/Components/Rendering/TriangleSet.cpp \
	Titania/X3D/Components/Rendering/TriangleStripSet.cpp \
	Titania/X3D/Components/Rendering/X3DColorNode.cpp \
	Titania/X3D/Components/Rendering/X3DComposedGeometryNode.cpp \
	Titania/X3D/Components/Rendering/X3DCoordinateNode.cpp \
	Titania/X3D/Components/Rendering/X3DGeometricPropertyNode.cpp \
	Titania/X3D/Components/Rendering/X3DGeometryNode.cpp \
	Titania/X3D/Components/Rendering/X3DNormalNode.cpp \
	Titania/X3D/Components/RigidBodyPhysics/BallJoint.cpp \
	Titania/X3D/Components/RigidBodyPhysics/CollidableOffset.cpp \
	Titania/X3D/Components/RigidBodyPhysics/CollidableShape.cpp \
	Titania/X3D/Components/RigidBodyPhysics/CollisionCollection.cpp \
	Titania/X3D/Components/RigidBodyPhysics/CollisionSensor.cpp \
	Titania/X3D/Components/RigidBodyPhysics/CollisionSpace.cpp \
	Titania/X3D/Components/RigidBodyPhysics/Contact.cpp \
	Titania/X3D/Components/RigidBodyPhysics/DoubleAxisHingeJoint.cpp \
	Titania/X3D/Components/RigidBodyPhysics/MotorJoint.cpp \
	Titania/X3D/Components/RigidBodyPhysics/RigidBody.cpp \
	Titania/X3D/Components/RigidBodyPhysics/RigidBodyCollection.cpp \
	Titania/X3D/Components/RigidBodyPhysics/SingleAxisHingeJoint.cpp \
	Titania/X3D/Components/RigidBodyPhysics/SliderJoint.cpp \
	Titania/X3D/Components/RigidBodyPhysics/UniversalJoint.cpp \
	Titania/X3D/Components/RigidBodyPhysics/X3DNBodyCollidableNode.cpp \
	Titania/X3D/Components/RigidBodyPhysics/X3DNBodyCollisionSpaceNode.cpp \
	Titania/X3D/Components/RigidBodyPhysics/X3DRigidJointNode.cpp \
	Titania/X3D/Components/Scripting/Script.cpp \
	Titania/X3D/Components/Scripting/X3DScriptNode.cpp \
	Titania/X3D/Components/Shaders/ComposedShader.cpp \
	Titania/X3D/Components/Shaders/FloatVertexAttribute.cpp \
	Titania/X3D/Components/Shaders/Matrix3VertexAttribute.cpp \
	Titania/X3D/Components/Shaders/Matrix4VertexAttribute.cpp \
	Titania/X3D/Components/Shaders/PackagedShader.cpp \
	Titania/X3D/Components/Shaders/ProgramShader.cpp \
	Titania/X3D/Components/Shaders/ShaderPart.cpp \
	Titania/X3D/Components/Shaders/ShaderProgram.cpp \
	Titania/X3D/Components/Shaders/X3DProgrammableShaderObject.cpp \
	Titania/X3D/Components/Shaders/X3DShaderNode.cpp \
	Titania/X3D/Components/Shaders/X3DVertexAttributeNode.cpp \
	Titania/X3D/Components/Shape/Appearance.cpp \
	Titania/X3D/Components/Shape/FillProperties.cpp \
	Titania/X3D/Components/Shape/LineProperties.cpp \
	Titania/X3D/Components/Shape/Material.cpp \
	Titania/X3D/Components/Shape/Shape.cpp \
	Titania/X3D/Components/Shape/TwoSidedMaterial.cpp \
	Titania/X3D/Components/Shape/X3DAppearanceChildNode.cpp \
	Titania/X3D/Components/Shape/X3DAppearanceNode.cpp \
	Titania/X3D/Components/Shape/X3DMaterialNode.cpp \
	Titania/X3D/Components/Shape/X3DShapeNode.cpp \
	Titania/X3D/Components/Sound/AudioClip.cpp \
	Titania/X3D/Components/Sound/Sound.cpp \
	Titania/X3D/Components/Sound/X3DSoundNode.cpp \
	Titania/X3D/Components/Sound/X3DSoundSourceNode.cpp \
	Titania/X3D/Components/Text/FontStyle.cpp \
	Titania/X3D/Components/Text/Text.cpp \
	Titania/X3D/Components/Text/X3DFontStyleNode.cpp \
	Titania/X3D/Components/Texturing/ImageTexture.cpp \
	Titania/X3D/Components/Texturing/MovieTexture.cpp \
	Titania/X3D/Components/Texturing/MultiTexture.cpp \
	Titania/X3D/Components/Texturing/MultiTextureCoordinate.cpp \
	Titania/X3D/Components/Texturing/MultiTextureTransform.cpp \
	Titania/X3D/Components/Texturing/PixelTexture.cpp \
	Titania/X3D/Components/Texturing/TextureCoordinate.cpp \
	Titania/X3D/Components/Texturing/TextureCoordinateGenerator.cpp \
	Titania/X3D/Components/Texturing/TextureProperties.cpp \
	Titania/X3D/Components/Texturing/TextureTransform.cpp \
	Titania/X3D/Components/Texturing/X3DTexture2DNode.cpp \
	Titania/X3D/Components/Texturing/X3DTextureCoordinateNode.cpp \
	Titania/X3D/Components/Texturing/X3DTextureNode.cpp \
	Titania/X3D/Components/Texturing/X3DTextureTransformNode.cpp \
	Titania/X3D/Components/Texturing3D/ComposedTexture3D.cpp \
	Titania/X3D/Components/Texturing3D/ImageTexture3D.cpp \
	Titania/X3D/Components/Texturing3D/PixelTexture3D.cpp \
	Titania/X3D/Components/Texturing3D/TextureCoordinate3D.cpp \
	Titania/X3D/Components/Texturing3D/TextureCoordinate4D.cpp \
	Titania/X3D/Components/Texturing3D/TextureTransform3D.cpp \
	Titania/X3D/Components/Texturing3D/TextureTransformMatrix3D.cpp \
	Titania/X3D/Components/Texturing3D/X3DTexture3DNode.cpp \
	Titania/X3D/Components/Time/TimeSensor.cpp \
	Titania/X3D/Components/Time/X3DTimeDependentNode.cpp \
	Titania/X3D/Configuration/ComponentInfo.cpp \
	Titania/X3D/Configuration/ComponentInfoArray.cpp \
	Titania/X3D/Configuration/ProfileInfo.cpp \
	Titania/X3D/Configuration/ProfileInfoArray.cpp \
	Titania/X3D/Configuration/SupportedComponents.cpp \
	Titania/X3D/Configuration/SupportedFields.cpp \
	Titania/X3D/Configuration/SupportedNodes.cpp \
	Titania/X3D/Configuration/SupportedProfiles.cpp \
	Titania/X3D/Configuration/SupporteFieldArray.cpp \
	Titania/X3D/Configuration/Unit.cpp \
	Titania/X3D/Configuration/UnitArray.cpp \
	Titania/X3D/Configuration/X3DUnitContext.cpp \
	Titania/X3D/Editing/Undo/UndoGroup.cpp \
	Titania/X3D/Editing/Undo/UndoHistory.cpp \
	Titania/X3D/Editing/Undo/UndoStep.cpp \
	Titania/X3D/Editing/X3DEditor.cpp \
	Titania/X3D/Execution/BindableNodeList.cpp \
	Titania/X3D/Execution/ExportedNode.cpp \
	Titania/X3D/Execution/ExportedNodeIndex.cpp \
	Titania/X3D/Execution/ImportedNode.cpp \
	Titania/X3D/Execution/ImportedNodeIndex.cpp \
	Titania/X3D/Execution/NamedNode.cpp \
	Titania/X3D/Execution/NamedNodeIndex.cpp \
	Titania/X3D/Execution/Scene.cpp \
	Titania/X3D/Execution/World.cpp \
	Titania/X3D/Execution/X3DExecutionContext.cpp \
	Titania/X3D/Execution/X3DScene.cpp \
	Titania/X3D/Fields/ArrayFields.cpp \
	Titania/X3D/Fields/MFInt32.cpp \
	Titania/X3D/Fields/MFNode.cpp \
	Titania/X3D/Fields/SFColor.cpp \
	Titania/X3D/Fields/SFColorRGBA.cpp \
	Titania/X3D/Fields/SFImage.cpp \
	Titania/X3D/Fields/SFMatrix3.cpp \
	Titania/X3D/Fields/SFMatrix4.cpp \
	Titania/X3D/Fields/SFNode.cpp \
	Titania/X3D/Fields/SFRotation4.cpp \
	Titania/X3D/Fields/SFString.cpp \
	Titania/X3D/Fields/SFTime.cpp \
	Titania/X3D/Fields/SFVec2.cpp \
	Titania/X3D/Fields/SFVec3.cpp \
	Titania/X3D/Fields/SFVec4.cpp \
	Titania/X3D/Fields/X3DScalar.cpp \
	Titania/X3D/InputOutput/Generator.cpp \
	Titania/X3D/InputOutput/GoldenGate.cpp \
	Titania/X3D/InputOutput/Loader.cpp \
	Titania/X3D/InputOutput/X3DBaseGenerator.cpp \
	Titania/X3D/JavaScript/PeaseBlossom.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/Browser.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/Context.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/Fields/ArrayFields.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/Fields/SFColor.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/Fields/SFColorRGBA.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/Fields/SFImage.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/Fields/SFMatrix3.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/Fields/SFMatrix4.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/Fields/SFNode.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/Fields/SFRotation.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/Fields/SFVec2.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/Fields/SFVec3.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/Fields/SFVec4.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/value.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/X3DArrayField.cpp \
	Titania/X3D/JavaScript/PeaseBlossom/X3DField.cpp \
	Titania/X3D/JavaScript/SpiderMonkey.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Browser.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/ComponentInfo.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/ComponentInfoArray.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Context.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/ExternProtoDeclarationArray.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/FieldDefinitionArray.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Fields/ArrayFields.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Fields/MFNode.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Fields/SFColor.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Fields/SFColorRGBA.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Fields/SFImage.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Fields/SFMatrix3.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Fields/SFMatrix4.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Fields/SFNode.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Fields/SFRotation.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Fields/SFVec2.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Fields/SFVec3.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Fields/SFVec4.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/Global.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/ProfileInfo.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/ProfileInfoArray.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/ProtoDeclarationArray.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/RouteArray.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/String.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/value.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/X3DConstants.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/X3DExecutionContext.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/X3DExternProtoDeclaration.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/X3DField.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/X3DFieldDefinition.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/X3DProtoDeclaration.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/X3DRoute.cpp \
	Titania/X3D/JavaScript/SpiderMonkey/X3DScene.cpp \
	Titania/X3D/JavaScript/X3DJavaScriptContext.cpp \
	Titania/X3D/JavaScript/X3DJavaScriptEngine.cpp \
	Titania/X3D/Parser/Filter.cpp \
	Titania/X3D/Parser/Grammar.cpp \
	Titania/X3D/Parser/Parser.cpp \
	Titania/X3D/Parser/RegEx.cpp \
	Titania/X3D/Parser/Wavefront/Parser.cpp \
	Titania/X3D/Parser/X3DParser.cpp \
	Titania/X3D/Prototype/ExternProtoArray.cpp \
	Titania/X3D/Prototype/ExternProtoDeclaration.cpp \
	Titania/X3D/Prototype/ProtoArray.cpp \
	Titania/X3D/Prototype/ProtoDeclaration.cpp \
	Titania/X3D/Prototype/X3DProtoDeclarationNode.cpp \
	Titania/X3D/Rendering/ClipPlaneContainer.cpp \
	Titania/X3D/Rendering/CollisionContainer.cpp \
	Titania/X3D/Rendering/FrameBuffer.cpp \
	Titania/X3D/Rendering/LightContainer.cpp \
	Titania/X3D/Rendering/PolygonModeContainer.cpp \
	Titania/X3D/Rendering/ShapeContainer.cpp \
	Titania/X3D/Rendering/ViewVolume.cpp \
	Titania/X3D/Rendering/X3DRenderer.cpp \
	Titania/X3D/Routing/Route.cpp \
	Titania/X3D/Routing/RouteArray.cpp \
	Titania/X3D/Routing/RouteSet.cpp \
	Titania/X3D/Routing/X3DRouterObject.cpp \
	Titania/X3D/Thread/SceneLoader.cpp \
	Titania/X3D/Thread/Texture3DLoader.cpp \
	Titania/X3D/Thread/TextureLoader.cpp \
	Titania/X3D/Tools/Core/Tool.cpp \
	Titania/X3D/Tools/Core/X3DToolObject.cpp \
	Titania/X3D/Tools/Geometry3D/IndexedFaceSetTool.cpp \
	Titania/X3D/Tools/Grids/AngleTool.cpp \
	Titania/X3D/Tools/Grids/GridTool.cpp \
	Titania/X3D/Tools/Grids/X3DGridTool.cpp \
	Titania/X3D/Tools/Layering/X3DActiveLayerTool.cpp \
	Titania/X3D/Tools/Navigation/BillboardTool.cpp \
	Titania/X3D/Tools/Navigation/CollisionTool.cpp \
	Titania/X3D/Tools/Navigation/LODTool.cpp \
	Titania/X3D/Tools/Picking/PickableGroupTool.cpp \
	Titania/X3D/Tools/PointingDeviceSensor/TouchGroupTool.cpp \
	Titania/X3D/Tools/Rendering/CoordinateTool.cpp \
	Titania/X3D/Tools/Rendering/NormalTool.cpp \
	Titania/X3D/Tools/Rendering/X3DCoordinateNodeTool.cpp \
	Titania/X3D/Tools/Rendering/X3DNormalNodeTool.cpp \
	Titania/X3D/Types/Image.cpp

libtitania_x3d_la_LIBADD = $(TITANIA_X3D_LIBS)  \
	$(TITANIA_OPENGL_SURFACE_LIBS) \
	$(TITANIA_STANDARD_LIBS) \
	$(TITANIA_STREAM_LIBS) \
	$(top_builddir)/libtitania-gzstream/libtitania-gzstream.la \
	$(top_builddir)/libtitania-opengl-surface/libtitania-opengl-surface.la \
	$(top_builddir)/libtitania-standard/libtitania-standard.la \
	$(top_builddir)/libtitania-stream/libtitania-stream.la \
	$(top_builddir)/libtitania-peaseblossom/libtitania-peaseblossom.la

AM_CPPFLAGS = $(TITANIA_X3D_CFLAGS) \
	$(TITANIA_OPENGL_SURFACE_CFLAGS) \
	$(TITANIA_STANDARD_CFLAGS) \
	$(TITANIA_STREAM_CFLAGS) \
	-I$(top_builddir)/libtitania-gzstream \
	-I$(top_builddir)/libtitania-opengl-surface \
	-I$(top_builddir)/libtitania-standard \
	-I$(top_builddir)/libtitania-stream \
	-I$(top_builddir)/libtitania-peaseblossom

install-exec-hook:
	cp -r share/ $(prefix)/
	find $(prefix)/share/titania/ -type d -exec chmod 755 {} \;
	find $(prefix)/share/titania/ -type f -exec chmod 644 {} \;

